# codexproxy

./: .gitignore  README.md  main.py  model-costs.json  model-pricing.json  proxy-config.example.json  pyproject.toml
codexproxy/: __init__.py  cli.py  config.py  count_display.py  debug_record.py  expiry_manager.py  model_costs.py  model_pricing.py  proxy.py  spend_tracker.py  state.py  usage_page.py
tests/: test_cli.py  test_config.py  test_debug_record.py  test_expiry_manager.py  test_model_costs.py  test_model_pricing.py  test_proxy.py  test_spend_tracker.py  test_usage_page.py
